--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,15 +1,42 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
+    /* --primary-color: #f12546; */
+    --primary-color: #3750eb;
+    --secondary-color: #c5d4fd;
+
     --bg-color: #f9fafe;
-    --text-color: #000000;
-    --card-color: #ffffff;
+    --text-color: #ffffff;
+    --border-color: #9ca3af;
 }
 
-.dark {
-    --bg-color: #1a202c;
-    --text-color: #e2e8f0;
-    --card-color: #2d3748;
+.dark-mode {
+    --bg-color: #000000;
+    --border-color: #9ca3af;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Poppins', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow: hidden;
+}
+
+input {
+    outline: none;
+    border: none;
 }
